// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PixelQuotaDisplay should match snapshot 1`] = `
<div>
  <div
    class="flex items-center gap-3"
  >
    <div
      class="relative w-10 h-10"
    >
      <svg
        class="w-10 h-10 transform -rotate-90 scale-y-[-1] "
      >
        <circle
          cx="20"
          cy="20"
          fill="none"
          r="16"
          stroke="rgba(255, 255, 255, 0.1)"
          stroke-width="3"
        />
        <circle
          cx="20"
          cy="20"
          fill="none"
          r="16"
          stroke="#929bc9"
          stroke-dasharray="100.53096491487338"
          stroke-dashoffset="67.02064327658226"
          stroke-linecap="round"
          stroke-width="3"
        />
      </svg>
    </div>
    <div
      class="flex flex-col"
    >
      <span
        class="text-sm font-medium"
        style="color: rgb(146, 155, 201);"
      >
        100
         / 
        300
      </span>
      <span
        class="text-xs"
        style="color: rgb(146, 155, 201); opacity: 0.7;"
      >
        +100/day
      </span>
    </div>
  </div>
</div>
`;

exports[`PixelQuotaDisplay should match snapshot when flashing 1`] = `
<div>
  <div
    class="flex items-center gap-3"
  >
    <div
      class="relative w-10 h-10"
    >
      <svg
        class="w-10 h-10 transform -rotate-90 scale-y-[-1] animate-pulse"
      >
        <circle
          cx="20"
          cy="20"
          fill="none"
          r="16"
          stroke="rgba(255, 255, 255, 0.1)"
          stroke-width="3"
        />
        <circle
          cx="20"
          cy="20"
          fill="none"
          r="16"
          stroke="#ef4444"
          stroke-dasharray="100.53096491487338"
          stroke-dashoffset="0"
          stroke-linecap="round"
          stroke-width="3"
        />
      </svg>
    </div>
    <div
      class="flex flex-col"
    >
      <span
        class="text-sm font-medium"
        style="color: rgb(146, 155, 201);"
      >
        100
         / 
        300
      </span>
      <span
        class="text-xs"
        style="color: rgb(146, 155, 201); opacity: 0.7;"
      >
        +100/day
      </span>
    </div>
  </div>
</div>
`;

exports[`PixelQuotaDisplay should match snapshot when over quota 1`] = `
<div>
  <div
    class="flex items-center gap-3"
  >
    <div
      class="relative w-10 h-10"
    >
      <svg
        class="w-10 h-10 transform -rotate-90 scale-y-[-1] animate-pulse"
      >
        <circle
          cx="20"
          cy="20"
          fill="none"
          r="16"
          stroke="rgba(255, 255, 255, 0.1)"
          stroke-width="3"
        />
        <circle
          cx="20"
          cy="20"
          fill="none"
          r="16"
          stroke="#ef4444"
          stroke-dasharray="100.53096491487338"
          stroke-dashoffset="0"
          stroke-linecap="round"
          stroke-width="3"
        />
      </svg>
    </div>
    <div
      class="flex flex-col"
    >
      <span
        class="text-sm font-medium"
        style="color: rgb(146, 155, 201);"
      >
        -50
         / 
        300
      </span>
      <span
        class="text-xs"
        style="color: rgb(146, 155, 201); opacity: 0.7;"
      >
        +100/day
      </span>
    </div>
  </div>
</div>
`;

exports[`PixelQuotaDisplay should match snapshot with low quota 1`] = `
<div>
  <div
    class="flex items-center gap-3"
  >
    <div
      class="relative w-10 h-10"
    >
      <svg
        class="w-10 h-10 transform -rotate-90 scale-y-[-1] "
      >
        <circle
          cx="20"
          cy="20"
          fill="none"
          r="16"
          stroke="rgba(255, 255, 255, 0.1)"
          stroke-width="3"
        />
        <circle
          cx="20"
          cy="20"
          fill="none"
          r="16"
          stroke="#ef4444"
          stroke-dasharray="100.53096491487338"
          stroke-dashoffset="97.17993275104426"
          stroke-linecap="round"
          stroke-width="3"
        />
      </svg>
    </div>
    <div
      class="flex flex-col"
    >
      <span
        class="text-sm font-medium"
        style="color: rgb(146, 155, 201);"
      >
        10
         / 
        300
      </span>
      <span
        class="text-xs"
        style="color: rgb(146, 155, 201); opacity: 0.7;"
      >
        +100/day
      </span>
    </div>
  </div>
</div>
`;

exports[`PixelQuotaDisplay should match snapshot with pending pixels 1`] = `
<div>
  <div
    class="flex items-center gap-3"
  >
    <div
      class="relative w-10 h-10"
    >
      <svg
        class="w-10 h-10 transform -rotate-90 scale-y-[-1] "
      >
        <circle
          cx="20"
          cy="20"
          fill="none"
          r="16"
          stroke="rgba(255, 255, 255, 0.1)"
          stroke-width="3"
        />
        <circle
          cx="20"
          cy="20"
          fill="none"
          r="16"
          stroke="#929bc9"
          stroke-dasharray="100.53096491487338"
          stroke-dashoffset="68.69615935849681"
          stroke-linecap="round"
          stroke-width="3"
        />
      </svg>
    </div>
    <div
      class="flex flex-col"
    >
      <span
        class="text-sm font-medium"
        style="color: rgb(146, 155, 201);"
      >
        95
         / 
        300
      </span>
      <span
        class="text-xs"
        style="color: rgb(146, 155, 201); opacity: 0.7;"
      >
        5 değişiklik
      </span>
    </div>
  </div>
</div>
`;
